--- a/index.html
+++ b/index.html
@@ -5,16 +5,8 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- comment this out during dev -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="
-            default-src 'self';
-            connect-src https://api.511.org;
-            style-src 'self';"
-    />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
-    <script src="dist/script.js" defer></script>
+    <script type="module" src="./src/script.ts"></script>
   </head>
   <body>
     <h2 id="time"></h2>
