split up files for easier development

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="Extremely lightweight real-time MUNI arrival tracker"
     />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
-    <script type="module" src="./src/script.ts"></script>
+    <script type="module" src="./src/index.ts"></script>
   </head>
   <body>
     <header>
